[package]
name = "basixT4"
version = "0.1.0"
authors = ["Garrett van Wageningen <ghvanw283@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
name = "basixT4"
path = "src/lib.rs"

[dependencies]
